--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<!--百度先生免费分享--如有疑问 请联系wechat:ox103922 >
+<!--百度先生免费分享--如有疑问 请联系wechat:ox103922>
 
 
 <title>谷歌搜索学术维基百科镜像站----jia110</title>
@@ -32,7 +32,7 @@
 		<br/>
 		1.镜像站封锁严重，存活不易，请珍惜<br/>
 		2.如有失效或镜像站推荐，请提交 <a href="https://github.com/jia110/jia110.github.io/issues">提交 issue</a>，我会及时更新。<br/>
-		3.如有疑问 请联系wechat:ox103922
+		3.如有疑问 请联系wechat:ox103922<br/>
 		</h3>
 <h3>下方是本站收集资源的官方地址,记得好评哟亲~</h3>
 
