--- a/index.htm
+++ b/index.htm
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<!--百度先生免费分享--如有疑问 请联系wechat:ox103922>
+<!--百度先生免费分享--如有疑问 请联系wechat:ox103922-->
 
 
 <title>谷歌搜索学术维基百科镜像站----jia110</title>
