--- a/index.htm
+++ b/index.htm
@@ -27,6 +27,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
       <h1 class="project-name">谷歌镜像站</h1>
       <h2 class="project-tagline">Google谷歌、Wikipedia维基百科、谷歌学术镜像2021年7月更新 新增搜索 维基百科 谷歌学术 github 等镜像站</h2>
       <a href="index.htm" class="btn">首页</a>
+	 <a href="bot.htm" class="btn">网上科学</a>
    <a href="https://afdian.net/@jia110" class="btn">捐助我们</a>
    <a href="https://github.com/jia110/jia110.github.io/" class="btn">GitHub页面</a>
     </section>
@@ -35,7 +36,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
         <h3>本站资源来源于网络，仅供学习交流使用，勿用于商业用途。<br/>所有镜像站均搜集自网络，请保护好你的隐私，请勿在镜像站中登录谷歌账号，本站不承担任何责任及连带责任！
 		<br/>
 		1.镜像站封锁严重，存活不易，请珍惜<br/>
-		2.如有失效或镜像站推荐，请提交 <a href="https://github.com/jia110/jia110.github.io/issues">提交 issue</a>，我会及时更新。<br/>
+		2.如有失效或镜像站推荐，请 <a href="https://github.com/jia110/jia110.github.io/issues">提交 issue</a>，我会及时更新。<br/>
 		3.如有疑问 请联系wechat:ox103922<br/>
 		</h3>
 <h3>下方是本站收集资源的官方地址,记得好评哟亲~</h3>
