--- a/bot.htm
+++ b/bot.htm
@@ -24,7 +24,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
   <body>
     <section class="page-header">
       <h1 class="project-name">网上科学--jia110</h1>
-      <h2 class="project-tagline">该服务仅供学术研究/行业研究人员学习研究使用;请勿用于其他用途! </h2>
+      <h2 class="project-tagline">仅供学术研究/行业研究人员学习研究使用;请勿用于其他用途! </h2>
       <h2 class="project-tagline">不定期维护 一次分享2GB,仅用于查询使用,请合理使用</h2>
    <a href="index.htm" class="btn">首页</a>
 	<a href="bot.htm" class="btn">关于</a>
