--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
       <h1 class="project-name">谷歌镜像站</h1>
       <h2 class="project-tagline">Google谷歌、Wikipedia维基百科、谷歌学术镜像2021年7月更新 新增搜索 维基百科 谷歌学术 github 等镜像站</h2>
       <a href="index.htm" class="btn">首页</a>
-	 <a href="bot.htm" class="btn">网上科学</a>
+	<!-- <a href="bot.htm" class="btn">网上科学</a>-->
    <a href="https://afdian.net/@jia110" class="btn">捐助我们</a>
    <a href="https://github.com/jia110/jia110.github.io/" class="btn">GitHub页面</a>
     </section>
