--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
 		<br/>
 		1.2021年10月更新 镜像站封锁严重，存活不易，请珍惜<br/>
 		2.如有失效或镜像站推荐，请 <a href="https://github.com/jia110/jia110.github.io/issues">提交 issue</a>，我会及时更新。<br/>
-		3.如需帮助 请联系WeChat：1039227140 赠人玫瑰 手有余香
+		3.本站立足公益，为方便学术科研工作而提供网站链接导航，不对目标网站内容负责
 		</h3>
 <h3>下方是本站收集资源的官方地址,记得好评哟亲~</h3>
 
