--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
   <tbody>
     <tr>
       <td>谷歌搜索</td>
-      <td style="text-align: center"><a href="https://eurybia.サクラ.tw">https://eurybia.サクラ.tw</a></td>
+      <td style="text-align: center"><a href="https://google.pem.app/">https://google.pem.app/</a></td>
      </tr>
 	
 	 <tr>
