--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
     <section class="main-content">
         <h3>本站资源来源于网络，仅供学习交流使用，勿用于其他用途。<br/>所有镜像站均搜集自网络，请保护好你的隐私，请勿在镜像站中登录谷歌账号，本站不承担任何责任及连带责任！
 		<br/>
-		1.2022年1月更新 镜像站封锁严重，存活不易，请珍惜<br/>
+		1.2022年3月更新 镜像站封锁严重，存活不易，请珍惜<br/>
 		2.如有失效或镜像站推荐，请 <a href="https://github.com/jia110/jia110.github.io/issues">提交 issue</a>，我会及时更新。<br/>
 		3.本站立足公益，为方便学术科研工作而提供网站链接导航，不对目标网站内容负责<br/>
 		4.近期实验室工作繁忙,如有问题 可联系WeChat: 1 518 889 9442
@@ -71,7 +71,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
 	 
     <tr>
       <td>谷歌搜索</td>
-     <td style="text-align: center"><a href="https://mars.shuu.cf/">https://mars.shuu.cf/</a></td>
+     <td style="text-align: center"><a href="https://search.xn--u8jta9j.tw/">https://search.xn--u8jta9j.tw/</a></td>
     </tr>
    
    
