--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
       <h1 class="project-name">2022谷歌镜像站</h1>
       <h2 class="project-tagline">Google谷歌、Wikipedia维基百科、谷歌学术镜像新增搜索 维基百科 谷歌学术 github 、Sci-Hub、Internet Archive等镜像站,国内镜像站,国内谷歌搜索,免翻墙谷歌</h2>
       <a href="index.htm" class="btn">首页</a>
-	<a href="bot.htm" class="btn">抖音-快手-视频号-微博-刷网课-超星-智慧树-拼多多-公众号等项目合作</a>
+	<a href="bot.htm" class="btn">没意思</a>
    <a href="https://github.com/jia110/jia110.github.io/" class="btn">GitHub页面</a>
     </section>
 
