--- a/bot.htm
+++ b/bot.htm
@@ -18,8 +18,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">抖音,快手,视频号,公众号</h1>
-      <h2 class="project-tagline">承接超星/智慧树/等 刷课 抖音,快手,视频号,公众号,微博,等等点赞 播放 粉丝 直播间互动 上热门 上榜等业务</h2>
+      <h1 class="project-name">没意思 该分享分享软件和教程</h1>
+      <h2 class="project-tagline">########</h2>
       <h2 class="project-tagline">合作请联系WeChat: 1 518 889 9442</h2>
    <a href="index.htm" class="btn">首页</a>
     <a href="https://github.com/jia110/jia110.github.io/" class="btn">GitHub页面</a>
