--- a/bot.htm
+++ b/bot.htm
@@ -18,8 +18,8 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">没意思 该分享分享软件和教程</h1>
-      <h2 class="project-tagline">########</h2>
+      <h1 class="project-name">北京焕一医学检验实验室有限公司 欠薪 克扣工资 5月份实验人员无证件做新冠 并放出豪言 你随便去仲裁 </h1>
+      <h2 class="project-tagline">已举报给国务院平台 下一步走仲裁 </h2>
       <h2 class="project-tagline">合作请联系WeChat: 1 518 889 9442</h2>
    <a href="index.htm" class="btn">首页</a>
     <a href="https://github.com/jia110/jia110.github.io/" class="btn">GitHub页面</a>
