--- a/bot.htm
+++ b/bot.htm
@@ -18,7 +18,7 @@
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">北京焕一医学检验实验室有限公司 欠薪 克扣工资 5月份实验人员无证件做新冠 并放出豪言 你随便去仲裁 </h1>
+      <h1 class="project-name">北京焕一医学检验实验室有限公司 欠薪 克扣工资 实验人员无证件做新冠 并放出豪言 你随便去仲裁 </h1>
       <h2 class="project-tagline">已举报给国务院平台 下一步走仲裁 </h2>
       <h2 class="project-tagline">合作请联系WeChat: 1 518 889 9442</h2>
    <a href="index.htm" class="btn">首页</a>
