--- a/index.htm
+++ b/index.htm
@@ -27,7 +27,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
       <h1 class="project-name">2022谷歌镜像站</h1>
       <h2 class="project-tagline">Google谷歌、Wikipedia维基百科、谷歌学术镜像新增搜索 维基百科 谷歌学术 github 、Sci-Hub、Internet Archive等镜像站,国内镜像站,国内谷歌搜索,免翻墙谷歌</h2>
       <a href="index.htm" class="btn">首页</a>
-	<a href="bot.htm" class="btn">北京焕一医学检验实验室有限公司西城区方舱 欠薪 克扣工资 实验人员无证件做新冠  实名举报</a>
+	<a href="bot.htm" class="btn">北京焕一医学检验实验室有限公司西城区方舱 欠薪 克扣工资 实验流程不规范 污染 已仲裁立案 </a>
    <a href="https://github.com/jia110/jia110.github.io/" class="btn">GitHub页面</a>
     </section>
 
