--- a/index.htm
+++ b/index.htm
@@ -27,14 +27,14 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
       <h1 class="project-name">2022谷歌镜像站</h1>
       <h2 class="project-tagline">Google谷歌、Wikipedia维基百科、谷歌学术镜像新增搜索 维基百科 谷歌学术 github 、Sci-Hub、Internet Archive等镜像站,国内镜像站,国内谷歌搜索,免翻墙谷歌</h2>
       <a href="index.htm" class="btn">首页</a>
-	<a href="#" class="btn">特别感谢 magojohnji 提供的镜像站 </a>
+	<a href="#" class="btn">特别感谢 热心网友提供的镜像站 </a>
    <a href="https://github.com/jia110/jia110.github.io/" class="btn">GitHub页面</a>
     </section>
 
     <section class="main-content">
         <h3>本站资源来源于网络，仅供学习交流使用，勿用于其他用途。<br/>所有镜像站均搜集自网络，请保护好你的隐私，请勿在镜像站中登录谷歌账号，本站不承担任何责任及连带责任！
 		<br/>
-		1.2022年7月更新 镜像站封锁严重，存活不易，请珍惜<br/>
+		1.2022年8月更新 镜像站封锁严重，存活不易，请珍惜<br/>
 		2.如有失效或镜像站推荐，请 <a href="https://github.com/jia110/jia110.github.io/issues">提交 issue</a>，我会及时更新。<br/>
 		3.本站立足公益，为方便学术科研工作而提供网站链接导航，不对目标网站内容负责<br/>
 		4.近期工作繁忙,如有问题 可联系WeChat: 1 518 889 9442
@@ -53,7 +53,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
 	
 	<tr>
       <td>谷歌搜索</td>
-      <td style="text-align: center"><a href="https://search.ahnu.cf/">https://search.ahnu.cf/</a></td>
+      <td style="text-align: center"><a href="http://d.6wl.cc/">http://d.6wl.cc/</a></td>
      </tr>
 
     <tr>
@@ -67,7 +67,27 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
 	
 	  <tr>
       <td>谷歌搜索</td>
-      <td style="text-align: center"><a href="https://google.pem.app/">https://google.pem.app/</a></td>
+      <td style="text-align: center"><a href="https://xgoogle.xyz/ ">https://xgoogle.xyz/ </a></td>
+     </tr>
+	    <tr>
+      <td>谷歌搜索</td>
+      <td style="text-align: center"><a href="https://g.qwq.fan/ ">https://g.qwq.fan/ </a></td>
+     </tr>
+	  
+	  <tr>
+      <td>谷歌搜索</td>
+      <td style="text-align: center"><a href="https://g.xzx725.top/ ">https://g.xzx725.top/ </a></td>
+     </tr>
+	
+	    <tr>
+      <td>谷歌搜索</td>
+      <td style="text-align: center"><a href="https://txt.muxinghe.cf/ ">https://txt.muxinghe.cf/ </a></td>
+     </tr>
+	  
+	  
+	    <tr>
+      <td>谷歌搜索</td>
+      <td style="text-align: center"><a href="https://goo.xbzxs.org/ ">https://goo.xbzxs.org/ </a></td>
      </tr>
     <tr>
       <td>谷歌学术</td>
