--- a/index.htm
+++ b/index.htm
@@ -55,7 +55,10 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
       <td>谷歌搜索</td>
       <td style="text-align: center"><a href="http://d.6wl.cc/">http://d.6wl.cc/</a></td>
      </tr>
-
+<tr>
+      <td>谷歌搜索</td>
+      <td style="text-align: center"><a href="https://谷歌.ml/ ">https://谷歌.ml/</a></td>
+     </tr>
     <tr>
       <td>谷歌搜索</td>
     <td style="text-align: center"><a href="http://google.1qi777.com/">http://google.1qi777.com/</a></td>
@@ -162,11 +165,11 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
 	
 	<tr>
       <td>GitHub</td>
-      <td style="text-align: center"><a href="https://hub.おうか.tw">https://hub.おうか.tw</a></td>
+      <td style="text-align: center"><a href="https://hub.njuu.cf/">https://hub.njuu.cf/</a></td>
     </tr>
 	<tr>
       <td>GitHub</td>
-      <td style="text-align: center"><a href="https://hub.連接.台灣">https://hub.連接.台灣</a></td>
+      <td style="text-align: center"><a href="https://hub.yzuu.cf/ ">https://hub.yzuu.cf/</a></td>
     </tr>
 	<tr>
       <td>GitHub</td>
@@ -175,6 +178,10 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
 	<tr>
       <td>GitHub</td>
       <td style="text-align: center"><a href="https://hub.fastgit.xyz/">https://hub.fastgit.xyz/</a></td>
+    </tr>
+	  <tr>
+      <td>GitHub</td>
+      <td style="text-align: center"><a href="https://hub.nuaa.cf">https://hub.nuaa.cf/</a></td>
     </tr>
 	
 	<tr>
