--- a/index.htm
+++ b/index.htm
@@ -57,7 +57,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
      </tr>
 <tr>
       <td>谷歌搜索</td>
-      <td style="text-align: center"><a href="#">https://谷歌.ml/</a></td>
+      <td style="text-align: center"><a href="https://xn--flw351e.ml/">https://谷歌.ml/</a></td>
      </tr>
     <tr>
       <td>谷歌搜索</td>
