--- a/index.htm
+++ b/index.htm
@@ -55,9 +55,19 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
       <td>谷歌搜索</td>
       <td style="text-align: center"><a href="https://xn--flw351e.ml/">https://谷歌.ml/</a></td>
      </tr>
+    <tr>
+      <td>谷歌搜索</td>
+      <td style="text-align: center"><a href="https://g13.i-research.edu.eu.org/?_gl=1*8jfzf0*_ga*MTk5NDU1NjA0OS4xNjYxOTE4Nzc4*_ga_JKNX0TZWKT*MTY2MTkxODc3Ny4xLjEuMTY2MTkxODgxNy4wLjAuMA..">g13.i-research.edu.eu.org</a></td>
+     </tr>
     
-	
-	
+	<tr>
+      <td>谷歌搜索</td>
+      <td style="text-align: center"><a href="https://www.qinai.ml/">https://www.qinai.ml/</a></td>
+     </tr>
+	<tr>
+      <td>谷歌搜索</td>
+      <td style="text-align: center"><a href="https://gogogle.gq/">https://gogogle.gq/</a></td>
+     </tr>
     <tr>
       <td>谷歌学术</td>
       <td style="text-align: center"><a href="https://sc.panda321.com/">https://sc.panda321.com/</a></td>
@@ -97,7 +107,15 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
       <td>谷歌学术</td>
       <td style="text-align: center"><a href="https://xs.dailyheadlines.cc/">https://xs.dailyheadlines.cc/</a></td>
     </tr>
-	
+	  <tr>
+      <td>谷歌学术</td>
+      <td style="text-align: center"><a href="https://g13.i-research.edu.eu.org/ggxs/scholar?_gl=1*143cb5e*_ga*MTk5NDU1NjA0OS4xNjYxOTE4Nzc4*_ga_JKNX0TZWKT*MTY2MTkxODc3Ny4xLjEuMTY2MTkxODg4Mi4wLjAuMA..&hl=en&lr=lang_en">https://g13.i-research.edu.eu.org/</a></td>
+    </tr>
+	  
+	<tr>
+      <td>谷歌学术</td>
+      <td style="text-align: center"><a href="https://xs2.dailyheadlines.cc/">https://xs2.dailyheadlines.cc/</a></td>
+    </tr>
    
 	<tr>
       <td>维基百科</td>
@@ -158,7 +176,18 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
       <td>Sci-Hub</td>
       <td style="text-align: center"><a href="https://sci-hub.ren">https://sci-hub.ren</a></td>
     </tr>
-	  
+	   <tr>
+      <td>Sci-Hub</td>
+      <td style="text-align: center"><a href="https://sci-hub.ru">https://sci-hub.ru</a></td>
+    </tr>
+	   <tr>
+      <td>Sci-Hub</td>
+      <td style="text-align: center"><a href="https://sci-hub.et-fine.com">https://sci-hub.et-fine.com</a></td>
+    </tr>
+	    <tr>
+      <td>Sci-Hub</td>
+      <td style="text-align: center"><a href="https://sci-hub.st/">https://sci-hub.st/</a></td>
+    </tr>
 	  
 	   <tr>
       <td>Internet Archive</td>
