--- a/index.htm
+++ b/index.htm
@@ -37,7 +37,7 @@ s.src="//s.union.360.cn/"+f+".js";s.defer=!0;s.async=!0;g.parentNode.insertBefor
 		1.2022年9月更新 镜像站封锁严重，存活不易，请珍惜<br/>
 		2.如有失效或镜像站推荐，请 <a href="https://github.com/jia110/jia110.github.io/issues">提交 issue</a>，我会及时更新。<br/>
 		3.本站立足公益，为方便学术科研工作而提供网站链接导航，不对目标网站内容负责<br/>
-		4.近期工作繁忙,如有问题 可联系WeChat: 1 518 889 9442
+		4.近期工作繁忙,如有问题 可联系WeChat: 1039227140 AND 1 518 889 9442
 		</h3>
 <h3>下方是本站收集资源的官方地址,记得好评哟亲~</h3>
 
